@@ -203,7 +203,7 @@ libcvs_a_SOURCES += xgetcwd.h xgetcwd.c
 libcvs_a_SOURCES += xsize.h
 
 ## For GNULIB's yesno module.
-libcvs_a_SOURCES += yesno.c yesno.h
+libcvs_a_SOURCES += yesno.c
 
 # Until Automake gets its act together
 distclean-local:
