@@ -8,8 +8,8 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase getpass-gnu gettimeofday timespec gettime unlocked-io tzset restrict time_r mktime minmax memmove nanosleep stat lstat strerror vasprintf malloc realloc strftime xsize getpagesize rpmatch yesno
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gethostname getline getndelim2 getnline getopt getpagesize getpass-gnu gettext gettime gettimeofday lstat malloc memmove minmax mkstemp mktime nanosleep pathmax realloc regex restrict rpmatch save-cwd stat stdbool strcase strerror strftime time_r timespec tzset unlocked-io vasnprintf vasprintf xalloc xgetcwd xsize yesno
+# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase getpass-gnu gettimeofday timespec gettime unlocked-io tzset restrict time_r mktime minmax memmove nanosleep stat lstat strerror vasprintf malloc realloc strftime xsize getpagesize
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gethostname getline getndelim2 getnline getopt getpagesize getpass-gnu gettext gettime gettimeofday lstat malloc memmove minmax mkstemp mktime nanosleep pathmax realloc regex restrict save-cwd stat stdbool strcase strerror strftime time_r timespec tzset unlocked-io vasnprintf vasprintf xalloc xgetcwd xsize
 
 AUTOMAKE_OPTIONS = 1.5 gnits no-dependencies
 
@@ -251,12 +251,6 @@ libgnu_a_SOURCES += xgetcwd.h xgetcwd.c
 libgnu_a_SOURCES += xsize.h
 
 ## end   gnulib module xsize
-
-## begin gnulib module yesno
-
-libgnu_a_SOURCES += yesno.c yesno.h
-
-## end   gnulib module yesno
 
 
 # Makefile.am ends here
