@@ -1,5 +1,9 @@
 2004-10-21  Derek Price  <derek@ximbiot.com>
 
+	* Makefile.am, rpmatch.c, yesno.h, yesno.c: Back out recent changes.
+
+2004-10-21  Derek Price  <derek@ximbiot.com>
+
 	* error.c, error.h: Update from GNULIB.
 
 2004-10-21  Mark Baushke  <mdb@cvshome.org>
